# CuMo

./: .gitignore  LICENSE  README.md  pyproject.toml
cumo/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
cumo/eval/: calculate_score.py  eval_gpt_review_bench.py  eval_pope.py  eval_textvqa.py  extract_answer.py  main_eval_only.py  model_qa.py  model_vqa.py  model_vqa_loader.py  model_vqa_mathvista.py  model_vqa_mmbench.py  model_vqa_mmmu.py  model_vqa_science.py  summarize_gpt_review.py
cumo/eval/mmmu_utils/: data_utils.py  eval_utils.py
cumo/model/: builder.py  llava_arch.py
cumo/model/language_model/: llava_mistral.py  llava_mixtral.py  llava_mpt.py  smoe_mixtral_helper.py
cumo/model/multimodal_encoder/: builder.py  clip.py  clip_encoder.py  clip_smoe.py
cumo/model/multimodal_projector/: builder.py
cumo/serve/: app.py  cli.py  controller.py  gradio_web_server.py  model_worker.py  sglang_worker.py
cumo/train/: llama_flash_attn_monkey_patch.py  llava_trainer.py  train.py  train_mem.py  train_xformers.py
docs/: getting_started.md
scripts/: convert_vqav2_for_submission.py  merge_lora_weights.py  zero3_offload.json
scripts/cumo/eval/: gqa.sh  llavabench.sh  mathvista.sh  mmbench.sh  mmbench_cn.sh  mme_m.sh  mmmu.sh  mmvet.sh  pope_m.sh  seed.sh  sqa_m.sh  textvqa_m.sh  vqav2.sh
scripts/cumo/mistral_7b/: pft_mistral_7b.sh  pretrain_mistral_7b.sh  sft_mistral_7b.sh
scripts/cumo/mixtral_8x7b/: pft_mixtral_8x7b.sh  pretrain_mixtral_8x7b.sh  sft_mixtral_8x7b.sh
